fixed login page being too large for window

--- a/public/bootstrap/less/gitter-login.less
+++ b/public/bootstrap/less/gitter-login.less
@@ -79,6 +79,8 @@ img {
 
 .hero-container {
   background-size: cover; 
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
   padding-top: 20px; 
   background-color: #eee; 
   height: 800px;
